# sgrpy

./: .gitignore  CITATION.cff  Cargo.toml  README.md  pyproject.toml
.github/workflows/: maturin.yml
doc/source/: conf.py  index.rst
doc/source/pages/: CLI Tutorial.md  CSV Specification.md  Process Flow.md
examples/: diverse.tsv
python/sgrpy/: __init__.py  dl_rs.pyi
python/sgrpy/cli/: __init__.py  _sgrcli.py
python/sgrpy/cli/tests/: __init__.py  test_train_cli.py
python/sgrpy/graph/: __init__.py  _bond.py  _canon_types.py  _cbgraph.py  _cbgraph_canon.py  _cgraph.py  _cgraph_canon.py  _colormapper.py  _fragments.py  _fragtree.py  _operations.py  _permutations.py  _tgraph.py  _ugraph.py  _ugraph_equiv.py
python/sgrpy/graph/tests/: __init__.py  cbgraphs_samples_128_4_4_16.txt  test_cbgraph.py  test_permutations.py  test_tgraph.py  test_ugraph_equiv.py
python/sgrpy/iotypes/: __init__.py  _dfio.py  _generics.py  _json.py  _jsonable.py
python/sgrpy/linear/: __init__.py  _regression.py  _utils.py
python/sgrpy/linear/tests/: __init__.py
python/sgrpy/model/: __init__.py  _model_colormap.py  _model_filter.py  _model_fragtree.py  _model_predict.py  _model_reject.py  _model_strparse.py  _model_train.py  _model_types.py  _model_utils.py  _models.py
python/sgrpy/model/tests/: __init__.py  test_colormap.py  test_train.py
python/sgrpy/shims/: __init__.py
python/sgrpy/shims/rdkit/: __init__.py  _benson_v2.py  _benson_v3.py  _benson_v4.py  _benson_v4_compat.py  _load_smiles.py  _structures.py
python/sgrpy/shims/rdkit/tests/: __init__.py  benson_simple.txt  test_benson_simple.py  test_benson_simple_v3.py  test_benson_v4.py  v4_data.json
python/sgrpy/train/: __init__.py  _common.py  _em_funcs.py  _fragmodel.py  _loss_funcs.py  _observation.py  _train_fragmodel.py
python/sgrpy/train/graph_seed/: __init__.py  _basic_heap.py  _bell_seed.py  _frequencyentry.py  _loose_heap.py  _max_partitions.py  _most_common_n.py  _most_common_n_v2.py
python/sgrpy/train/graph_seed/tests/: __init__.py  cbgraphs_samples_128_4_4_16_results.txt  test_basic_heap.py  test_get_atomic_fragments.py  test_graph.txt  test_loose_heap.py  test_max_partitions.py  (+4 more)
python/sgrpy/train/tests/: __init__.py  test_fragmodel.py  test_stefan_graphs.txt
python/sgrpy/train/utils/: __init__.py  _bellfuncs.py  _correction_factors.py  _normalize_weights.py
src/: algorithms.rs  lib.rs
src/algorithms/: knuth_x.rs  special.rs
src/algorithms/knuth_x/: algos.rs  links.rs  search.rs
src/algorithms/knuth_x/algos/: avg_est.rs  col_select.rs  get_all.rs  get_top.rs  get_top_v2.rs  get_topn.rs  get_topp.rs  indexmapper.rs  min_est.rs  options.rs  utils.rs
src/algorithms/knuth_x/links/: column_header.rs  column_vec.rs  cover.rs  dancinglinks.rs  head_address.rs  link_address.rs  node.rs  node_vec.rs  row_address.rs
src/algorithms/knuth_x/search/: funcheap.rs  heaptrait.rs  limfuncheap.rs  linkstate.rs  minheap.rs  movelist.rs  queuetrait.rs  searchstate.rs
src/algorithms/special/: logdiffexp.rs  logsumexp.rs
(+7 files in other folders)
