[package]
name = "sgrpy"
version = "0.1.9"
edition = "2024"

[lib]
name = "sgrpy"
crate-type = ["cdylib"]

[dependencies]
approx = "0.5.1"
itertools = "0.14.0"
ordered-float = "5.3.0"
pyo3 = { version = "0.28.3", features = ["abi3-py312", "extension-module", "generate-import-lib"] }
statrs = "0.18.0"

[profile.release]
strip = "symbols"
lto = true
